Add Transfer Screen

--- a/Course 11/Course 11.vcxproj.filters
+++ b/Course 11/Course 11.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="clsLogFileScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsTransferScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Utility Library.cpp">
