--- a/Course 11/Course 11.vcxproj
+++ b/Course 11/Course 11.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Lesson #4 - Delete Client.cpp" />
     <ClCompile Include="Lesson #5 - List Clients.cpp" />
     <ClCompile Include="Lesson #6 - Total Balances.cpp" />
+    <ClCompile Include="TemplateFunctions.cpp" />
     <ClCompile Include="Utility Library.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
