--- a/Course 11/Course 11.vcxproj.filters
+++ b/Course 11/Course 11.vcxproj.filters
@@ -158,5 +158,8 @@
     <ClCompile Include="TemplateFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TemplateClasses.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
